--- a/design/Paging_Manage/files/home/styles.css
+++ b/design/Paging_Manage/files/home/styles.css
@@ -546,7 +546,7 @@
   left:0px;
   top:0px;
   width:899px;
-  height:523px;
+  height:531px;
   background:inherit;
   background-color:rgba(242, 242, 242, 0.4);
   border:none;
@@ -561,7 +561,7 @@
   left:307px;
   top:225px;
   width:899px;
-  height:523px;
+  height:531px;
 }
 #u13_text {
   border-width:0px;
@@ -902,7 +902,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:154px;
+  width:155px;
   white-space:nowrap;
 }
 .u24_img {
@@ -2332,7 +2332,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:116px;
+  width:114px;
   white-space:nowrap;
 }
 #u64_div {
@@ -3708,7 +3708,7 @@
   left:0px;
   top:0px;
   width:204px;
-  height:76px;
+  height:59px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   box-sizing:border-box;
@@ -3733,7 +3733,7 @@
   left:80px;
   top:275px;
   width:204px;
-  height:76px;
+  height:59px;
 }
 #u102_div.mouseOver {
   border-width:0px;
@@ -3741,7 +3741,7 @@
   left:0px;
   top:0px;
   width:204px;
-  height:76px;
+  height:59px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -3762,6 +3762,33 @@
 }
 #u102.mouseOver {
 }
+#u102_div.selected {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:204px;
+  height:59px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(204, 204, 204, 1);
+  border-left:0px;
+  border-right:0px;
+  border-bottom:0px;
+  border-radius:0px;
+  border-top-left-radius:0px;
+  border-top-right-radius:0px;
+  border-bottom-right-radius:0px;
+  border-bottom-left-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u102.selected {
+}
 #u102_text {
   border-width:0px;
   position:absolute;
@@ -3776,7 +3803,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:45px;
+  width:43px;
   height:18px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -3795,8 +3822,8 @@
   border-width:0px;
   position:absolute;
   left:103px;
-  top:283px;
-  width:45px;
+  top:282px;
+  width:43px;
   height:18px;
   font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';
   font-weight:600;
@@ -3809,7 +3836,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:45px;
+  width:43px;
   height:18px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -3831,7 +3858,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:45px;
+  width:43px;
   white-space:nowrap;
 }
 #u104_div {
@@ -3840,7 +3867,7 @@
   left:0px;
   top:0px;
   width:190px;
-  height:37px;
+  height:20px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -3859,9 +3886,9 @@
   border-width:0px;
   position:absolute;
   left:102px;
-  top:305px;
+  top:303px;
   width:190px;
-  height:37px;
+  height:20px;
   font-family:'OpenSans', 'Open Sans';
   font-weight:400;
   font-style:normal;
@@ -3902,7 +3929,7 @@
   border-width:0px;
   position:absolute;
   left:266px;
-  top:284px;
+  top:283px;
   width:18px;
   height:18px;
   font-family:'FontAwesome';
@@ -3971,8 +3998,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:14px;
-  height:15px;
+  width:16px;
+  height:14px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -3983,26 +4010,47 @@
   font-family:'FontAwesome';
   font-weight:400;
   font-style:normal;
-  color:#666666;
+  color:#0099D3;
 }
 #u106 {
   border-width:0px;
   position:absolute;
-  left:86px;
-  top:287px;
-  width:14px;
-  height:15px;
+  left:81px;
+  top:286px;
+  width:16px;
+  height:14px;
   font-family:'FontAwesome';
   font-weight:400;
   font-style:normal;
-  color:#666666;
+  color:#0099D3;
+}
+#u106_div.selected {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:16px;
+  height:14px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'FontAwesome';
+  font-weight:400;
+  font-style:normal;
+  color:#0099D3;
+}
+#u106.selected {
 }
 #u106_text {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:14px;
+  width:16px;
   white-space:nowrap;
 }
 #u107 {
@@ -4019,7 +4067,7 @@
   left:0px;
   top:0px;
   width:203px;
-  height:54px;
+  height:75px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   box-sizing:border-box;
@@ -4042,9 +4090,9 @@
   border-width:0px;
   position:absolute;
   left:80px;
-  top:351px;
+  top:333px;
   width:203px;
-  height:54px;
+  height:75px;
 }
 #u108_div.mouseOver {
   border-width:0px;
@@ -4052,7 +4100,7 @@
   left:0px;
   top:0px;
   width:203px;
-  height:54px;
+  height:75px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -4107,7 +4155,7 @@
   border-width:0px;
   position:absolute;
   left:102px;
-  top:361px;
+  top:344px;
   width:73px;
   height:18px;
   font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';
@@ -4154,7 +4202,7 @@
   left:0px;
   top:0px;
   width:190px;
-  height:23px;
+  height:26px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -4173,9 +4221,9 @@
   border-width:0px;
   position:absolute;
   left:102px;
-  top:380px;
+  top:366px;
   width:190px;
-  height:23px;
+  height:26px;
   font-family:'OpenSans', 'Open Sans';
   font-weight:400;
   font-style:normal;
@@ -4216,7 +4264,7 @@
   border-width:0px;
   position:absolute;
   left:265px;
-  top:362px;
+  top:346px;
   width:18px;
   height:18px;
   font-family:'FontAwesome';
@@ -4286,7 +4334,7 @@
   left:0px;
   top:0px;
   width:14px;
-  height:15px;
+  height:17px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -4297,19 +4345,19 @@
   font-family:'FontAwesome';
   font-weight:400;
   font-style:normal;
-  color:#666666;
+  color:#0099D3;
 }
 #u112 {
   border-width:0px;
   position:absolute;
   left:84px;
-  top:362px;
+  top:346px;
   width:14px;
-  height:15px;
+  height:17px;
   font-family:'FontAwesome';
   font-weight:400;
   font-style:normal;
-  color:#666666;
+  color:#0099D3;
 }
 #u112_text {
   border-width:0px;
@@ -4355,7 +4403,7 @@
   border-width:0px;
   position:absolute;
   left:80px;
-  top:405px;
+  top:409px;
   width:203px;
   height:62px;
 }
@@ -4419,7 +4467,7 @@
   border-width:0px;
   position:absolute;
   left:101px;
-  top:417px;
+  top:421px;
   width:67px;
   height:18px;
   font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';
@@ -4508,7 +4556,7 @@
   border-width:0px;
   position:absolute;
   left:103px;
-  top:436px;
+  top:440px;
   width:190px;
   height:23px;
   font-family:'OpenSans', 'Open Sans';
@@ -4551,7 +4599,7 @@
   border-width:0px;
   position:absolute;
   left:265px;
-  top:414px;
+  top:418px;
   width:18px;
   height:18px;
   font-family:'FontAwesome';
@@ -4621,7 +4669,7 @@
   left:0px;
   top:0px;
   width:14px;
-  height:15px;
+  height:14px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -4632,19 +4680,19 @@
   font-family:'FontAwesome';
   font-weight:400;
   font-style:normal;
-  color:#666666;
+  color:#CCCCCC;
 }
 #u118 {
   border-width:0px;
   position:absolute;
   left:84px;
-  top:419px;
+  top:423px;
   width:14px;
-  height:15px;
+  height:14px;
   font-family:'FontAwesome';
   font-weight:400;
   font-style:normal;
-  color:#666666;
+  color:#CCCCCC;
 }
 #u118_text {
   border-width:0px;
@@ -5870,7 +5918,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:66px;
+  width:64px;
   height:19px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -5887,9 +5935,9 @@
 #u161 {
   border-width:0px;
   position:absolute;
-  left:223px;
+  left:225px;
   top:671px;
-  width:66px;
+  width:64px;
   height:19px;
   font-family:'OpenSans', 'Open Sans';
   font-weight:400;
@@ -5901,7 +5949,7 @@
   position:absolute;
   left:2px;
   top:2px;
-  width:62px;
+  width:60px;
   white-space:nowrap;
 }
 #u162_img {
@@ -6542,7 +6590,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:71px;
+  width:70px;
   white-space:nowrap;
 }
 #u184_div {
@@ -6756,7 +6804,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:71px;
+  width:70px;
   white-space:nowrap;
 }
 #u189_div {
@@ -6932,7 +6980,185 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u193_div {
+#u193 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  height:0px;
+}
+#u194_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:212px;
+  height:22px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(204, 204, 204, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';
+  font-weight:600;
+  font-style:normal;
+  font-size:10px;
+  color:#666666;
+  text-align:left;
+}
+#u194 {
+  border-width:0px;
+  position:absolute;
+  left:307px;
+  top:169px;
+  width:212px;
+  height:22px;
+  font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';
+  font-weight:600;
+  font-style:normal;
+  font-size:10px;
+  color:#666666;
+  text-align:left;
+}
+#u194_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u195_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:130px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(242, 242, 242, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'OpenSans', 'Open Sans';
+  font-weight:400;
+  font-style:normal;
+  font-size:10px;
+}
+#u195 {
+  border-width:0px;
+  position:absolute;
+  left:355px;
+  top:173px;
+  width:130px;
+  height:15px;
+  font-family:'OpenSans', 'Open Sans';
+  font-weight:400;
+  font-style:normal;
+  font-size:10px;
+}
+#u195_text {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:0px;
+  width:126px;
+  word-wrap:break-word;
+}
+#u196_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:36px;
+  height:14px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';
+  font-weight:600;
+  font-style:normal;
+  font-size:10px;
+  color:#666666;
+}
+#u196 {
+  border-width:0px;
+  position:absolute;
+  left:313px;
+  top:173px;
+  width:36px;
+  height:14px;
+  font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';
+  font-weight:600;
+  font-style:normal;
+  font-size:10px;
+  color:#666666;
+}
+#u196_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:36px;
+  white-space:nowrap;
+}
+#u197_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:23px;
+  height:14px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'OpenSans-Bold', 'Open Sans Bold', 'Open Sans';
+  font-weight:700;
+  font-style:normal;
+  font-size:10px;
+  color:#169BD5;
+  text-align:center;
+}
+#u197 {
+  border-width:0px;
+  position:absolute;
+  left:490px;
+  top:172px;
+  width:23px;
+  height:14px;
+  font-family:'OpenSans-Bold', 'Open Sans Bold', 'Open Sans';
+  font-weight:700;
+  font-style:normal;
+  font-size:10px;
+  color:#169BD5;
+  text-align:center;
+}
+#u197_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:23px;
+  word-wrap:break-word;
+}
+#u198_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6952,7 +7178,7 @@
   font-size:11px;
   color:#999999;
 }
-#u193 {
+#u198 {
   border-width:0px;
   position:absolute;
   left:313px;
@@ -6965,7 +7191,7 @@
   font-size:11px;
   color:#999999;
 }
-#u193_text {
+#u198_text {
   border-width:0px;
   position:absolute;
   left:0px;
