--- a/design/Paging_Manage/files/home/styles.css
+++ b/design/Paging_Manage/files/home/styles.css
@@ -6964,15 +6964,15 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:896px;
+  width:897px;
   height:2px;
 }
 #u192 {
   border-width:0px;
   position:absolute;
-  left:310px;
+  left:309px;
   top:228px;
-  width:895px;
+  width:896px;
   height:1px;
 }
 #u192_text {
@@ -7228,37 +7228,15 @@
   width:105px;
   white-space:nowrap;
 }
+#u200_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:33px;
+  height:40px;
+}
 #u200 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  height:0px;
-}
-#u201_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:32px;
-  height:39px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-left:0px;
-  border-top:0px;
-  border-bottom:0px;
-  border-radius:0px;
-  border-top-left-radius:0px;
-  border-top-right-radius:0px;
-  border-bottom-right-radius:0px;
-  border-bottom-left-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-}
-#u201 {
   border-width:0px;
   position:absolute;
   left:545px;
@@ -7266,29 +7244,58 @@
   width:32px;
   height:39px;
 }
-#u201_div.mouseOver {
+#u200_img.mouseOver {
+}
+#u200.mouseOver {
+}
+#u200_img.selected {
+  left:-2px;
+  top:-2px;
+  width:39px;
+  height:46px;
+}
+#u200.selected {
+}
+#u200_text {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:32px;
-  height:39px;
-  background:inherit;
-  background-color:rgba(0, 153, 211, 0.156862745098039);
-  border:none;
-  border-left:0px;
-  border-top:0px;
-  border-bottom:0px;
-  border-radius:0px;
-  border-top-left-radius:0px;
-  border-top-right-radius:0px;
-  border-bottom-right-radius:0px;
-  border-bottom-left-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u201_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:2px;
+  height:38px;
+}
+#u201 {
+  border-width:0px;
+  position:absolute;
+  left:560px;
+  top:230px;
+  width:1px;
+  height:37px;
+}
+#u201_img.mouseOver {
 }
 #u201.mouseOver {
+}
+#u201_img.selected {
+  left:-2px;
+  top:-2px;
+  width:8px;
+  height:44px;
+}
+#u201.selected {
+}
+#u201_img.disabled {
+}
+#u201.disabled {
 }
 #u201_text {
   border-width:0px;
@@ -7302,24 +7309,111 @@
 #u202_img {
   border-width:0px;
   position:absolute;
-  left:-3px;
-  top:-3px;
-  width:11px;
-  height:49px;
+  left:0px;
+  top:0px;
+  width:2px;
+  height:38px;
 }
 #u202 {
   border-width:0px;
   position:absolute;
-  left:559px;
-  top:228px;
-  width:2px;
-  height:40px;
+  left:470px;
+  top:231px;
+  width:1px;
+  height:37px;
 }
 #u202_img.mouseOver {
 }
 #u202.mouseOver {
 }
 #u202_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u203_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:2px;
+  height:38px;
+}
+#u203 {
+  border-width:0px;
+  position:absolute;
+  left:807px;
+  top:230px;
+  width:1px;
+  height:37px;
+}
+#u203_img.mouseOver {
+}
+#u203.mouseOver {
+}
+#u203_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u204_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:2px;
+  height:38px;
+}
+#u204 {
+  border-width:0px;
+  position:absolute;
+  left:982px;
+  top:230px;
+  width:1px;
+  height:37px;
+}
+#u204_img.mouseOver {
+}
+#u204.mouseOver {
+}
+#u204_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u205_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:2px;
+  height:38px;
+}
+#u205 {
+  border-width:0px;
+  position:absolute;
+  left:1111px;
+  top:229px;
+  width:1px;
+  height:37px;
+}
+#u205_img.mouseOver {
+}
+#u205.mouseOver {
+}
+#u205_text {
   border-width:0px;
   position:absolute;
   left:0px;
