--- a/design/Paging_Manage/files/home/styles.css
+++ b/design/Paging_Manage/files/home/styles.css
@@ -5415,6 +5415,27 @@
   word-wrap:break-word;
 }
 #u144 {
+  position:absolute;
+  left:68px;
+  top:172px;
+}
+#u144_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  width:231px;
+  height:651px;
+  background-image:none;
+}
+#u144_state0_content {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u145 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -5422,7 +5443,15 @@
   width:0px;
   height:0px;
 }
-#u145_div {
+#u146 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  height:0px;
+}
+#u147_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -5440,15 +5469,15 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u145 {
+#u147 {
   border-width:0px;
   position:absolute;
-  left:68px;
-  top:172px;
+  left:0px;
+  top:0px;
   width:231px;
   height:651px;
 }
-#u145_text {
+#u147_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -5457,23 +5486,15 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u146 {
+#u148 {
   border-width:0px;
   position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  height:0px;
-}
-#u147 {
-  border-width:0px;
-  position:absolute;
-  left:79px;
-  top:559px;
+  left:11px;
+  top:387px;
   width:210px;
   height:30px;
 }
-#u147_input {
+#u148_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -5487,10 +5508,10 @@
   text-decoration:none;
   color:#000000;
 }
-#u147_input:disabled {
+#u148_input:disabled {
   color:grayText;
 }
-#u148_div {
+#u149_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -5511,11 +5532,11 @@
   color:#333333;
   text-align:left;
 }
-#u148 {
+#u149 {
   border-width:0px;
   position:absolute;
-  left:77px;
-  top:681px;
+  left:9px;
+  top:509px;
   width:138px;
   height:21px;
   font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';
@@ -5525,7 +5546,7 @@
   color:#333333;
   text-align:left;
 }
-#u148_text {
+#u149_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -5533,7 +5554,7 @@
   width:134px;
   word-wrap:break-word;
 }
-#u149_img {
+#u150_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -5541,11 +5562,11 @@
   width:18px;
   height:20px;
 }
-#u149 {
+#u150 {
   border-width:0px;
   position:absolute;
-  left:260px;
-  top:709px;
+  left:192px;
+  top:537px;
   width:18px;
   height:20px;
   font-family:'FontAwesome';
@@ -5553,7 +5574,7 @@
   font-style:normal;
   color:#666666;
 }
-#u149_text {
+#u150_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -5562,15 +5583,15 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u150 {
+#u151 {
   border-width:0px;
   position:absolute;
-  left:79px;
-  top:594px;
+  left:11px;
+  top:422px;
   width:211px;
   height:30px;
 }
-#u150_input {
+#u151_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -5585,7 +5606,7 @@
   color:#000000;
   text-align:left;
 }
-#u151 {
+#u152 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -5593,7 +5614,7 @@
   width:0px;
   height:0px;
 }
-#u152_div {
+#u153_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -5611,15 +5632,15 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u152 {
+#u153 {
   border-width:0px;
   position:absolute;
-  left:77px;
-  top:439px;
+  left:9px;
+  top:267px;
   width:212px;
   height:96px;
 }
-#u152_text {
+#u153_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -5628,7 +5649,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u153_div {
+#u154_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -5648,11 +5669,11 @@
   font-size:12px;
   color:#333333;
 }
-#u153 {
+#u154 {
   border-width:0px;
   position:absolute;
-  left:86px;
-  top:445px;
+  left:18px;
+  top:273px;
   width:40px;
   height:21px;
   font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';
@@ -5661,7 +5682,7 @@
   font-size:12px;
   color:#333333;
 }
-#u153_text {
+#u154_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -5669,38 +5690,12 @@
   width:36px;
   white-space:nowrap;
 }
-#u154 {
-  border-width:0px;
-  position:absolute;
-  left:89px;
-  top:477px;
-  width:92px;
-  height:16px;
-  font-family:'OpenSans', 'Open Sans';
-  font-weight:400;
-  font-style:normal;
-  font-size:11px;
-}
-#u154_text {
-  border-width:0px;
-  position:absolute;
-  left:16px;
-  top:0px;
-  width:74px;
-  word-wrap:break-word;
-}
-#u154_input {
-  border-width:0px;
-  position:absolute;
-  left:-3px;
-  top:-2px;
-}
 #u155 {
   border-width:0px;
   position:absolute;
-  left:89px;
-  top:502px;
-  width:166px;
+  left:21px;
+  top:305px;
+  width:92px;
   height:16px;
   font-family:'OpenSans', 'Open Sans';
   font-weight:400;
@@ -5712,7 +5707,7 @@
   position:absolute;
   left:16px;
   top:0px;
-  width:148px;
+  width:74px;
   word-wrap:break-word;
 }
 #u155_input {
@@ -5721,7 +5716,33 @@
   left:-3px;
   top:-2px;
 }
-#u156_div {
+#u156 {
+  border-width:0px;
+  position:absolute;
+  left:21px;
+  top:330px;
+  width:166px;
+  height:16px;
+  font-family:'OpenSans', 'Open Sans';
+  font-weight:400;
+  font-style:normal;
+  font-size:11px;
+}
+#u156_text {
+  border-width:0px;
+  position:absolute;
+  left:16px;
+  top:0px;
+  width:148px;
+  word-wrap:break-word;
+}
+#u156_input {
+  border-width:0px;
+  position:absolute;
+  left:-3px;
+  top:-2px;
+}
+#u157_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -5741,11 +5762,11 @@
   font-size:14px;
   color:#666666;
 }
-#u156 {
+#u157 {
   border-width:0px;
   position:absolute;
-  left:265px;
-  top:450px;
+  left:197px;
+  top:278px;
   width:12px;
   height:14px;
   font-family:'FontAwesome';
@@ -5754,7 +5775,7 @@
   font-size:14px;
   color:#666666;
 }
-#u156_text {
+#u157_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -5762,15 +5783,15 @@
   width:12px;
   white-space:nowrap;
 }
-#u157 {
+#u158 {
   border-width:0px;
   position:absolute;
-  left:80px;
-  top:705px;
+  left:12px;
+  top:533px;
   width:168px;
   height:30px;
 }
-#u157_input {
+#u158_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -5784,10 +5805,10 @@
   text-decoration:none;
   color:#666666;
 }
-#u157_input:disabled {
+#u158_input:disabled {
   color:grayText;
 }
-#u158_div {
+#u159_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -5808,11 +5829,11 @@
   color:#333333;
   text-align:left;
 }
-#u158 {
+#u159 {
   border-width:0px;
   position:absolute;
-  left:77px;
-  top:745px;
+  left:9px;
+  top:573px;
   width:138px;
   height:21px;
   font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';
@@ -5822,7 +5843,7 @@
   color:#333333;
   text-align:left;
 }
-#u158_text {
+#u159_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -5830,15 +5851,15 @@
   width:134px;
   word-wrap:break-word;
 }
-#u159 {
+#u160 {
   border-width:0px;
   position:absolute;
-  left:79px;
-  top:768px;
+  left:11px;
+  top:596px;
   width:168px;
   height:30px;
 }
-#u159_input {
+#u160_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -5852,10 +5873,10 @@
   text-decoration:none;
   color:#666666;
 }
-#u159_input:disabled {
+#u160_input:disabled {
   color:grayText;
 }
-#u160_img {
+#u161_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -5863,11 +5884,11 @@
   width:18px;
   height:20px;
 }
-#u160 {
+#u161 {
   border-width:0px;
   position:absolute;
-  left:259px;
-  top:773px;
+  left:191px;
+  top:601px;
   width:18px;
   height:20px;
   font-family:'FontAwesome';
@@ -5875,7 +5896,7 @@
   font-style:normal;
   color:#666666;
 }
-#u160_text {
+#u161_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -5884,7 +5905,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u161_div {
+#u162_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -5903,11 +5924,11 @@
   font-style:normal;
   font-size:11px;
 }
-#u161 {
+#u162 {
   border-width:0px;
   position:absolute;
-  left:225px;
-  top:671px;
+  left:157px;
+  top:499px;
   width:64px;
   height:19px;
   font-family:'OpenSans', 'Open Sans';
@@ -5915,7 +5936,7 @@
   font-style:normal;
   font-size:11px;
 }
-#u161_text {
+#u162_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -5923,7 +5944,7 @@
   width:60px;
   white-space:nowrap;
 }
-#u162_img {
+#u163_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -5931,16 +5952,16 @@
   width:212px;
   height:2px;
 }
-#u162 {
+#u163 {
   border-width:0px;
   position:absolute;
-  left:77px;
-  top:664px;
+  left:9px;
+  top:492px;
   width:211px;
   height:1px;
   color:#999999;
 }
-#u162_text {
+#u163_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -5949,7 +5970,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u163_div {
+#u164_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -5971,11 +5992,11 @@
   font-style:normal;
   font-size:11px;
 }
-#u163 {
+#u164 {
   border-width:0px;
   position:absolute;
-  left:221px;
-  top:630px;
+  left:153px;
+  top:458px;
   width:67px;
   height:20px;
   font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';
@@ -5983,7 +6004,7 @@
   font-style:normal;
   font-size:11px;
 }
-#u163_div.mouseOver {
+#u164_div.mouseOver {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6005,9 +6026,9 @@
   font-style:normal;
   font-size:11px;
 }
-#u163.mouseOver {
+#u164.mouseOver {
 }
-#u163_text {
+#u164_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -6015,12 +6036,12 @@
   width:63px;
   word-wrap:break-word;
 }
-#u164 {
+#u165 {
   position:absolute;
-  left:77px;
-  top:222px;
+  left:10px;
+  top:50px;
 }
-#u164_state0 {
+#u165_state0 {
   position:relative;
   left:0px;
   top:0px;
@@ -6028,7 +6049,7 @@
   height:209px;
   background-image:none;
 }
-#u164_state0_content {
+#u165_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6036,7 +6057,7 @@
   width:1px;
   height:1px;
 }
-#u165 {
+#u166 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6044,7 +6065,7 @@
   width:0px;
   height:0px;
 }
-#u166_div {
+#u167_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6062,7 +6083,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u166 {
+#u167 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6070,7 +6091,7 @@
   width:211px;
   height:209px;
 }
-#u166_text {
+#u167_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6079,37 +6100,11 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u167 {
-  border-width:0px;
-  position:absolute;
-  left:19px;
-  top:46px;
-  width:94px;
-  height:16px;
-  font-family:'OpenSans', 'Open Sans';
-  font-weight:400;
-  font-style:normal;
-  font-size:11px;
-}
-#u167_text {
-  border-width:0px;
-  position:absolute;
-  left:16px;
-  top:0px;
-  width:76px;
-  word-wrap:break-word;
-}
-#u167_input {
-  border-width:0px;
-  position:absolute;
-  left:-3px;
-  top:-2px;
-}
 #u168 {
   border-width:0px;
   position:absolute;
   left:19px;
-  top:72px;
+  top:46px;
   width:94px;
   height:16px;
   font-family:'OpenSans', 'Open Sans';
@@ -6135,7 +6130,7 @@
   border-width:0px;
   position:absolute;
   left:19px;
-  top:98px;
+  top:72px;
   width:94px;
   height:16px;
   font-family:'OpenSans', 'Open Sans';
@@ -6161,7 +6156,7 @@
   border-width:0px;
   position:absolute;
   left:19px;
-  top:125px;
+  top:98px;
   width:94px;
   height:16px;
   font-family:'OpenSans', 'Open Sans';
@@ -6187,7 +6182,7 @@
   border-width:0px;
   position:absolute;
   left:19px;
-  top:152px;
+  top:125px;
   width:94px;
   height:16px;
   font-family:'OpenSans', 'Open Sans';
@@ -6213,7 +6208,7 @@
   border-width:0px;
   position:absolute;
   left:19px;
-  top:178px;
+  top:152px;
   width:94px;
   height:16px;
   font-family:'OpenSans', 'Open Sans';
@@ -6235,7 +6230,33 @@
   left:-3px;
   top:-2px;
 }
-#u173_div {
+#u173 {
+  border-width:0px;
+  position:absolute;
+  left:19px;
+  top:178px;
+  width:94px;
+  height:16px;
+  font-family:'OpenSans', 'Open Sans';
+  font-weight:400;
+  font-style:normal;
+  font-size:11px;
+}
+#u173_text {
+  border-width:0px;
+  position:absolute;
+  left:16px;
+  top:0px;
+  width:76px;
+  word-wrap:break-word;
+}
+#u173_input {
+  border-width:0px;
+  position:absolute;
+  left:-3px;
+  top:-2px;
+}
+#u174_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6255,7 +6276,7 @@
   font-size:12px;
   color:#333333;
 }
-#u173 {
+#u174 {
   border-width:0px;
   position:absolute;
   left:11px;
@@ -6268,7 +6289,7 @@
   font-size:12px;
   color:#333333;
 }
-#u173_text {
+#u174_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -6276,7 +6297,7 @@
   width:32px;
   white-space:nowrap;
 }
-#u174_div {
+#u175_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6295,7 +6316,7 @@
   font-style:normal;
   color:#666666;
 }
-#u174 {
+#u175 {
   border-width:0px;
   position:absolute;
   left:186px;
@@ -6307,7 +6328,7 @@
   font-style:normal;
   color:#666666;
 }
-#u174_div.mouseOver {
+#u175_div.mouseOver {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6326,9 +6347,9 @@
   font-style:normal;
   color:#666666;
 }
-#u174.mouseOver {
+#u175.mouseOver {
 }
-#u174_text {
+#u175_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6336,7 +6357,7 @@
   width:12px;
   white-space:nowrap;
 }
-#u164_state1 {
+#u165_state1 {
   position:relative;
   left:0px;
   top:0px;
@@ -6345,7 +6366,7 @@
   visibility:hidden;
   background-image:none;
 }
-#u164_state1_content {
+#u165_state1_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6353,7 +6374,7 @@
   width:1px;
   height:1px;
 }
-#u175 {
+#u176 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6361,7 +6382,7 @@
   width:0px;
   height:0px;
 }
-#u176_div {
+#u177_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6379,7 +6400,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u176 {
+#u177 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6387,7 +6408,7 @@
   width:211px;
   height:45px;
 }
-#u176_text {
+#u177_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6396,7 +6417,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u177_div {
+#u178_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6416,7 +6437,7 @@
   font-size:12px;
   color:#333333;
 }
-#u177 {
+#u178 {
   border-width:0px;
   position:absolute;
   left:11px;
@@ -6429,7 +6450,7 @@
   font-size:12px;
   color:#333333;
 }
-#u177_text {
+#u178_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -6437,7 +6458,7 @@
   width:32px;
   white-space:nowrap;
 }
-#u178_div {
+#u179_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6456,7 +6477,7 @@
   font-style:normal;
   color:#666666;
 }
-#u178 {
+#u179 {
   border-width:0px;
   position:absolute;
   left:186px;
@@ -6468,7 +6489,7 @@
   font-style:normal;
   color:#666666;
 }
-#u178_div.mouseOver {
+#u179_div.mouseOver {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6487,9 +6508,9 @@
   font-style:normal;
   color:#666666;
 }
-#u178.mouseOver {
+#u179.mouseOver {
 }
-#u178_text {
+#u179_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6497,47 +6518,21 @@
   width:12px;
   white-space:nowrap;
 }
-#u179_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:212px;
-  height:1px;
-}
-#u179 {
-  border-width:0px;
-  position:absolute;
-  left:80px;
-  top:214px;
-  width:211px;
-  height:0px;
-  color:#999999;
-}
-#u179_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
 #u180_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:212px;
-  height:2px;
+  height:1px;
 }
 #u180 {
   border-width:0px;
   position:absolute;
-  left:77px;
-  top:547px;
+  left:12px;
+  top:42px;
   width:211px;
-  height:1px;
+  height:0px;
   color:#999999;
 }
 #u180_text {
@@ -6549,7 +6544,33 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u181_div {
+#u181_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:212px;
+  height:2px;
+}
+#u181 {
+  border-width:0px;
+  position:absolute;
+  left:9px;
+  top:375px;
+  width:211px;
+  height:1px;
+  color:#999999;
+}
+#u181_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u182_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -6569,11 +6590,11 @@
   font-size:12px;
   color:#999999;
 }
-#u181 {
+#u182 {
   border-width:0px;
   position:absolute;
-  left:276px;
-  top:184px;
+  left:206px;
+  top:17px;
   width:10px;
   height:12px;
   font-family:'FontAwesome';
@@ -6582,38 +6603,13 @@
   font-size:12px;
   color:#999999;
 }
-#u181_text {
+#u182_text {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:10px;
   white-space:nowrap;
-}
-#u182_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:1px;
-  height:34px;
-}
-#u182 {
-  border-width:0px;
-  position:absolute;
-  left:189px;
-  top:200px;
-  width:0px;
-  height:33px;
-}
-#u182_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
-  word-wrap:break-word;
 }
 #u183_div {
   border-width:0px;
@@ -6637,8 +6633,8 @@
 #u183 {
   border-width:0px;
   position:absolute;
-  left:81px;
-  top:187px;
+  left:13px;
+  top:15px;
   width:81px;
   height:19px;
   font-family:'OpenSans', 'Open Sans';
