--- a/design/Manage-section/data/styles.css
+++ b/design/Manage-section/data/styles.css
@@ -7,21 +7,6 @@
   text-align:center;
   line-height:normal;
 }
-.box_1 {
-}
-.box_2 {
-}
-.box_3 {
-}
-.shape {
-}
-.image {
-}
-.button {
-}
-.link_button {
-  color:#169BD5;
-}
 .heading_1 {
   font-family:'ArialMT', 'Arial';
   font-weight:bold;
@@ -70,11 +55,51 @@
 .paragraph {
   text-align:left;
 }
+.box_1 {
+}
+.box_2 {
+}
+.box_3 {
+}
+.ellipse {
+}
+.shape {
+  font-family:'ArialMT', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:8px;
+  color:#169BD5;
+  text-align:center;
+  line-height:normal;
+}
+.image {
+}
+.button {
+}
+.primary_button {
+  color:#FFFFFF;
+}
+.link_button {
+  color:#169BD5;
+}
+.primary_nav_button {
+  font-family:'OpenSans', 'Open Sans';
+  font-weight:400;
+  font-style:normal;
+  font-size:14px;
+  color:#DBDADA;
+}
 .line {
 }
-.arrow {
-}
 .text_field {
+  font-family:'OpenSans', 'Open Sans';
+  font-weight:400;
+  font-style:normal;
+  font-size:11px;
+  color:#000000;
+  text-align:left;
+}
+.text_area {
   color:#000000;
   text-align:left;
 }
@@ -82,25 +107,42 @@
   color:#000000;
   text-align:left;
 }
-.tree_node {
+.list_box {
+  color:#000000;
   text-align:left;
 }
-.sticky_1 {
+.checkbox {
   text-align:left;
 }
-.sticky_2 {
+.radio_button {
   text-align:left;
-}
-.sticky_3 {
-  text-align:left;
-}
-.sticky_4 {
-  text-align:left;
-}
-.marker {
-  color:#FFFFFF;
 }
 .flow_shape {
 }
+.html_button {
+  text-align:center;
+}
+.tree_node {
+  text-align:left;
+}
+.table_cell {
+}
+.menu_item {
+}
+.heading_11 {
+  font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  font-size:32px;
+  text-align:left;
+}
 .icon {
+}
+.new_style {
+  font-family:'OpenSans', 'Open Sans';
+  font-weight:400;
+  font-style:normal;
+  font-size:11px;
+  color:#666666;
+  text-align:left;
 }
