--- a/design/Palette_demo/files/home/styles.css
+++ b/design/Palette_demo/files/home/styles.css
@@ -265,8 +265,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:78px;
-  height:17px;
+  width:75px;
+  height:14px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -274,9 +274,6 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'OpenSans', 'Open Sans';
-  font-weight:400;
-  font-style:normal;
   font-size:12px;
   color:#363636;
 }
@@ -285,11 +282,8 @@
   position:absolute;
   left:20px;
   top:16px;
-  width:78px;
-  height:17px;
-  font-family:'OpenSans', 'Open Sans';
-  font-weight:400;
-  font-style:normal;
+  width:75px;
+  height:14px;
   font-size:12px;
   color:#363636;
 }
@@ -298,7 +292,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:78px;
+  width:75px;
   white-space:nowrap;
 }
 #u8 {
@@ -588,7 +582,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'OpenSans', 'Open Sans';
+  font-family:'Arial', 'Helvetica', 'sans-serif';
   font-weight:400;
   font-style:normal;
   font-size:12px;
@@ -601,7 +595,7 @@
   top:16px;
   width:78px;
   height:17px;
-  font-family:'OpenSans', 'Open Sans';
+  font-family:'Arial', 'Helvetica', 'sans-serif';
   font-weight:400;
   font-style:normal;
   font-size:12px;
