--- a/design/Palette_demo/files/home/styles.css
+++ b/design/Palette_demo/files/home/styles.css
@@ -582,7 +582,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Arial', 'Helvetica', 'sans-serif';
+  font-family:'sans-serif';
   font-weight:400;
   font-style:normal;
   font-size:12px;
@@ -595,7 +595,7 @@
   top:16px;
   width:78px;
   height:17px;
-  font-family:'Arial', 'Helvetica', 'sans-serif';
+  font-family:'sans-serif';
   font-weight:400;
   font-style:normal;
   font-size:12px;
