--- a/design/Palette_demo/files/spacing_style_specs__approx_/styles.css
+++ b/design/Palette_demo/files/spacing_style_specs__approx_/styles.css
@@ -1195,6 +1195,14 @@
   width:252px;
   white-space:nowrap;
 }
+#u37_ann {
+  border-width:0px;
+  position:absolute;
+  left:500px;
+  top:8px;
+  width:1px;
+  height:1px;
+}
 #u38_img {
   border-width:0px;
   position:absolute;
@@ -1225,8 +1233,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:175px;
-  height:34px;
+  width:293px;
+  height:64px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -1242,8 +1250,8 @@
   position:absolute;
   left:262px;
   top:87px;
-  width:175px;
-  height:34px;
+  width:293px;
+  height:64px;
   font-size:10px;
   color:#FF00FF;
 }
@@ -1252,7 +1260,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:175px;
+  width:293px;
   word-wrap:break-word;
 }
 #u40_img {
@@ -1743,5 +1751,40 @@
   left:0px;
   top:0px;
   width:195px;
+  word-wrap:break-word;
+}
+#u56_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:158px;
+  height:78px;
+  background:inherit;
+  background-color:rgba(102, 102, 102, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  font-size:10px;
+  color:#FFFFFF;
+}
+#u56 {
+  border-width:0px;
+  position:absolute;
+  left:13px;
+  top:354px;
+  width:158px;
+  height:78px;
+  font-size:10px;
+  color:#FFFFFF;
+}
+#u56_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:10px;
+  width:138px;
   word-wrap:break-word;
 }
